3638.	[cleanup]	Add the ability to handle ENOPROTOOPT in case it is 
			encountered. [RT #34668]

3637.	[bug]		'allow-query-on' was checking the source address
			rather than the destination address. [RT #34590]

3636.	[bug]		Automatic empty zones now behave better with
			forward only "zones" beneath them. [RT #34583]

3635.	[bug]		Signatures were not being removed from a zone with
			only KSK keys for a algorithm. [RT #24439]

3634.	[func]		Report build-id in rndc status. Report build-id
			when building from a git repository. [RT #20422]

3633.	[cleanup]	Refactor OPT processing in named to make it easier
			to support new EDNS options. [RT #34414]

3632.	[bug]		Signature from newly inactive keys were not being
			removed. [RT #32178]

3631.	[bug]		Remove spurious warning about missing signatures when
			qtype is SIG. [RT #34600]

3630.	[bug]		Ensure correct ID computation for MD5 keys. [RT #33033]

3629.	[func]		Allow the printing of cryptographic fields in DNSSEC
			records by dig to be suppressed (dig +nocrypto).
			[RT #34534]

3628.	[func]		Report DNSKEY key id's when dumping the cache.
			[RT #34533]

3627.	[bug]		RPZ changes were not effective on slaves. [RT #34450]

3626.	[func]		dig: NSID output now easier to read. [RT #21160]

3625.	[bug]		Don't send notify messages to machines outside of the
			test setup.

3624.	[bug]		Look for 'json_object_new_int64' when looking for a
			the json library. [RT #34449]

3623.	[placeholder]

3622.	[tuning]	Eliminate an unnecessary lock when incrementing
			cache statistics. [RT #34339]

3621.	[security]	Incorrect bounds checking on private type 'keydata'
			can lead to a remotely triggerable REQUIRE failure
			(CVE-2013-4854). [RT #34238]

3620.	[func]		Added "rpz-client-ip" policy triggers, enabling
			RPZ responses to be configured on the basis of
			the client IP address; this can be used, for
			example, to blacklist misbehaving recursive
			or stub resolvers. [RT #33605]
