@@ -171,6 +171,9 @@ struct dns_rdata {
 #define DNS_STYLEFLAG_COMMENT		0x00000002U
 #define DNS_STYLEFLAG_RRCOMMENT		0x00000004U
 
+/*% Output KEYDATA in human readable format. */
+#define DNS_STYLEFLAG_KEYDATA		0x00000008U
+
 #define DNS_RDATA_DOWNCASE		DNS_NAME_DOWNCASE
 #define DNS_RDATA_CHECKNAMES		DNS_NAME_CHECKNAMES
 #define DNS_RDATA_CHECKNAMESFAIL	DNS_NAME_CHECKNAMESFAIL
